fix: fix horizontal scroll in slider

--- a/module1/css/testimonials.css
+++ b/module1/css/testimonials.css
@@ -1,3 +1,7 @@
+.testimonials {
+  overflow: hidden;
+}
+
 .testimonials-container {
   max-width: 1120px;
   margin: 0 auto;
